--- a/index.html
+++ b/index.html
@@ -14,9 +14,18 @@
 <body>
     <header class="header-mobile">
     <img src="/assets/images/logo.svg" alt="Logo do site de notícias W.">
+
     <button>
         <img src="/assets/images/icon-menu.svg" alt="Icon do menu">
     </button>
+
+    <nav>
+        ><a href="#">Home</a>
+        ><a href="#">Novo</a>
+        ><a href="#">Popular</a>
+        ><a href="#">Trending</a>
+        ><a href="#">Categorias</a>
+    </nav>
     </header>
 
     <main>
