--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="style.css">
     <title>W. Notícias</title>
 </head>
-<body>
+<body class="menu-open">
     <header class="header-mobile">
     <img src="/assets/images/logo.svg" alt="Logo do site de notícias W.">
 
@@ -20,11 +20,15 @@
     </button>
 
     <nav>
-        ><a href="#">Home</a>
-        ><a href="#">Novo</a>
-        ><a href="#">Popular</a>
-        ><a href="#">Trending</a>
-        ><a href="#">Categorias</a>
+        <button>
+            <img src="/assets/images/icon-menu-close.svg" alt="icone de X para fechar o menu">
+        </button>
+
+        <a href="#">Home</a>
+        <a href="#">Novo</a>
+        <a href="#">Popular</a>
+        <a href="#">Trending</a>
+        <a href="#">Categorias</a>
     </nav>
     </header>
 
